Ensure the previous arrow doesn't overlap in RTL
This change affects the editor

--- a/src/blocks/carousel/editor.scss
+++ b/src/blocks/carousel/editor.scss
@@ -30,6 +30,7 @@
 			left: 1.5em;
 			margin-top: -24px; // buttons height / 2
 			transform: translateY( -50% );
+			right: auto;
 		}
 
 		&.amp-carousel-button-next {
